# SLCA_LLM4Quality

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  worker.py
analysis/: README.md
analysis/01_Humans_GPT4_and_CA_performances/: 00_define_categories_and_feedback_keys.R  01_create_gold_standard_matrix.R  02_create_human_matrix.R  03_create_GPT4_matrices.R  04_humans_GPT4_and_CA_performances.R  05_create_GPT4_CA_error_list.R  06_hallucination_rates.R  07_McNemar_tests.R  08_reproducibility_measurement.R
analysis/02_ML_benchmark/: 00_define_categories_and_feedback_keys.R  01_create_GPT4_matrix.R  02_create_regex_matrix.R  03_create_NB_matrix.R  04_create_LSTM_matrix.R  05_create_Llama3_matrix.R  06_compare_algorithms.R  07_graphical_abstract_figure_experience_3.R
analysis/03_Supplementary_data/: Supplementary_tables_2_to_5.R
consistency_llm/: utils.py
consistency_llm/consistency_evaluation/: lca_evaluation.py  sca_evaluation.py  slca_evaluation.py
consistency_llm/llm_queries/: few_shot_cot_classification.py  initial_classification.py
datas/: categories.json  few_shot_cot_classification_prompt.txt  initial_classification_prompt.txt  inputs.csv  output_structure.json
output/evaluations/lca/output_2/: result_1.json
output/evaluations/sca/: result_1.json
output/evaluations/slca/: result_1.json
output/llm_queries/output_1/: few_shot_cot_classification_result_1.json
output/llm_queries/output_2/: initial_classification_result_1.json
